--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/oliwer1.png" alt="to ja" width="175" height="175"></td>
+      <td><img src="oliwer1.png" alt="to ja" width="175" height="175"></td>
       <td>
         <h1>Oliwer</h1>
         <p><em>Ja to sie <strong>ucze tutaj</strong></em></p>
